[package]
name = "acerola_jam_0"
version = "0.1.0"
edition = "2021"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
gamepads = { git = "git://github.com/lzurbriggen/gamepads" }
macroquad = { git = "https://github.com/not-fl3/macroquad", features = [
    "audio",
] }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad" }
