[package]
name = "acerola_jam_0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acerola_jam_0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.dev.package.'*']
opt-level = 3

[dependencies]
gamepads = { git = "https://github.com/lzurbriggen/gamepads", default-features = false }
macroquad = { git = "https://github.com/not-fl3/macroquad", features = [
    "audio",
] }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad" }
