[package]
name = "tombs_of_mirituhg"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "tombs_of_mirituhg"

[lib]
path = "src/main.rs"
# crate-type = ["cdylib"]

[profile.dev.package.'*']
opt-level = 3

[dependencies]
gamepads = { git = "https://github.com/lzurbriggen/gamepads", default-features = false }
macroquad = { git = "https://github.com/not-fl3/macroquad", features = [
    "audio",
] }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad" }
